extension/resources/style.css
/*
 * Copyright Anton Khodakivskiy 2012, 2013.
 * Copyright Simon Lydell 2013, 2014.
 *
 * This file is part of VimFx.
 *
 * VimFx is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * VimFx is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with VimFx.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright (c) 2010 Phil Crosby, Ilya Sukhar.
 *
 * Permission is hereby granted, free of charge, to any person
 * obtaining a copy of this software and associated documentation
 * files (the "Software"), to deal in the Software without
 * restriction, including without limitation the rights to use,
 * copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following
 * conditions:
 *
 * The above copyright notice and this permission notice shall be
 * included in all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 * OTHER DEALINGS IN THE SOFTWARE.
 */

/* Copied over from vimium project */
.VimFxReset {
    background: none !important;
    border: none !important;
    /*bottom: auto !important;*/
    box-shadow: none !important;
    color: WindowText !important;
    cursor: auto !important;
    display: inline !important;
    float: none !important;
    font-family: "Helvetica Neue", "Helvetica", "Arial", "Sans" !important;
    font-size: inherit !important;
    font-style: normal !important;
    font-variant: normal !important;
    font-weight: normal !important;
    height: auto !important;
    /*left: auto !important;*/
    letter-spacing: 0 !important;
    line-height: 100% !important;
    margin: 0 !important;
    max-height: none !important;
    max-width: none !important;
    min-height: 0 !important;
    min-width: 0 !important;
    opacity: 1 !important;
    outline: none !important;
    padding: 0 !important;
    position: static !important;
    /*right: auto !important;*/
    text-align: left !important;
    text-decoration: none !important;
    text-indent: 0 !important;
    text-shadow: none !important;
    text-transform: none !important;
    /*top: auto !important;*/
    vertical-align: baseline !important;
    white-space: normal !important;
    width: auto !important;
    float: none !important;
}
.VimFxReset::before,
.VimFxReset::after {
    content: none !important;
}

/* Markers */

.VimFxMarkersContainer {
  position: absolute;
}

.VimFxHintMarker {
    position: absolute;
    padding: 1px 2px 0 2px;
    line-height: 1;
    background-color: #FFD76E;
    border: solid 1px #AD810C;
    border-radius: 2px;
    box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.3);
    font-size: 12px;
    color: #302505;
    font-family: "Helvetica Neue", "Helvetica", "Arial", "Sans";
    font-weight: bold;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
    text-transform: uppercase;
}

.VimFxCharMatch,
.VimFxMatchedHintMarker {
    color: #ffa22a;
}

.VimFxHiddenHintMarker {
    display: none;
}

/* This class is temporarily added to markable element, to remove border-radius
 * while doing some computations. The `!important`s are therefore needed. */
.VimFxNoBorderRadius {
    border-radius: 0 !important;
    /* `transition` is reset here to make sure that the above declaration
     * takes effect immediately. */
    transition: none !important;
}

/* Help Dialog */

div#VimFxHelpDialog {
    opacity: 0.92 !important;
    background-color: Window !important;
    position: fixed !important;
    /* See mode-hints/hints.coffee for where the z-index value comes from. */
    z-index: 2147480000 !important;
    border-radius: 3px !important;
    padding: 15px 30px !important;
    width: 700px !important;
    left: 50% !important;
    /* This needs to be 1/2 width to horizontally center the help dialog */
    margin-left: -380px !important;
    top: 30px !important;
    box-shadow: rgba(1, 2, 1, 0.4) 0px 0px 6px !important;
    overflow-y: auto !important;
    font-size: 15px !important;
    max-height: 80% !important;
}

div#VimFxHelpDialog .VimFxTitle {
    font-size: 30px !important;
    line-height: 130% !important;
    display: block !important;
    float: left !important;
}

div#VimFxHelpDialog .VimFxClearFix {
    clear: both !important;
    float: none !important;
    display: block !important;
    visibility: hidden !important;
    height: 0 !important;
}

div#VimFxHelpDialog .VimFxTitleVim {
    color: darkgreen !important;
}

div#VimFxHelpDialog .VimFxTitleFx {
    color: darkred !important;
}

div#VimFxHelpDialog .VimFxVersion {
    float: right !important;
    position: absolute !important;
    top: 20px !important;
    right: 100px !important;
    font-size: 12px !important;
}

div#VimFxHelpDialog .VimFxClose {
    float: right !important;
    font-family: "Helvetica Neue", "Helvetica", "Arial", "Sans" !important;
    position: absolute !important;
    right: 20px !important;
    top: 20px !important;
    font-size: 20px !important;
    cursor: pointer !important;
}

div#VimFxHelpDialog .VimFxColumn {
    width: 46% !important;
    margin: 0 0 0 8% !important;
    float: left !important;
    margin-bottom: 10px !important;
}

div#VimFxHelpDialog .VimFxColumn:first-child {
    margin: 0 !important;
}

div#VimFxHelpDialog .VimFxSectionTitle {
    display: block !important;
    font-size: 15px !important;
    font-weight: bold !important;
    line-height: 140% !important;
    text-transform: uppercase !important;
    margin: 30px 0 10px 0 !important;

}

div#VimFxHelpDialog table.VimFxReset {
    display: table !important;
    table-layout: fixed !important;
}

div#VimFxHelpDialog tr.VimFxReset {
    display: table-row !important;
}

div#VimFxHelpDialog td.VimFxReset {
    display: table-cell !important;
    padding-top: 2px !important;
    padding-bottom: 4px !important;
    line-height: 15px !important;
}

div.VimFxKeySequence {
    max-width: 70px !important;
    text-align: right !important;
    font-weight: bold !important;
    color: #2f508e !important;
    white-space: nowrap !important;
}

a.VimFxKeyLink {
    display: inline !important;
    background: #777 !important;
    border: none !important;
    color: #fff !important;
    cursor: pointer !important;
    font-weight: bold !important;
    border-radius: 3px !important;
    text-shadow: 1px 1px #666 !important;
    font-size: 75% !important;
    padding: 2px 3px !important;
}

a.VimFxKeyLink:hover {
    outline: 3px solid #c55500 !important;
    -moz-outline-radius: 6px !important;
    background: #c55500 !important;
    border-radius: 0px !important;
    text-decoration: none !important;
}

a.VimFxAddShortcutLink {
    color: #c55500 !important;
    cursor: pointer !important;
    margin-left: 2px !important;
}

div#VimFxHelpDialog .VimFxFooter {
    float: left !important;
    margin-top: 30px !important;
    font-size: 12px !important;
}

div#VimFxHelpDialog .VimFxFooter p {
    display: block !important;
    line-height: 150% !important;
    margin-bottom: 5px !important;
}

div#VimFxHelpDialog .VimFxFooter a {
    text-decoration: underline !important;
    color: darkblue !important;
    cursor: pointer !important;
}

div#VimFxHelpDialog span.VimFxDot {
    color: #818181 !important;
}

